# ga4nn

./: CMakeLists.txt  LICENSE
example/balance/: CMakeLists.txt  main.cpp
example/balance-extended/: CMakeLists.txt  main.cpp
example/simple/: CMakeLists.txt  main.cpp
example/xor/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  connector.hpp  crossover.hpp  genetic.hpp  genotype.hpp  layer.cpp  layer.hpp  mutation.hpp  neural_net.cpp  neural_net.hpp  neuron.cpp  neuron.hpp  neuron_factory.cpp  neuron_factory.hpp  population.hpp  population_generator.hpp  selection.hpp  stop_function.hpp
test/: .clang_complete  CMakeLists.txt  core.cpp  mock_neuron.hpp
